# quad-core-flow

./: .gitignore  LICENSE  README.md  pyproject.toml  qcf.toml  setup.py
.claude/agents/: README.md  api-reviewer.md  arch-reviewer.md  code-quality-reviewer.md  design-reviewer.md  evolver.md  implement.md  pilot.md  security-reviewer.md  task-validator.md  tech-lead.md  test-agent.md
.claude/skills/pilot/: SKILL.md
.claude/skills/qcf-auto/: SKILL.md
.claude/skills/qcf-config/: SKILL.md
.claude/skills/qcf-events/: SKILL.md
.claude/skills/qcf-evolve/: SKILL.md
.claude/skills/qcf-run/: SKILL.md
.claude/skills/qcf-start/: SKILL.md
.claude/skills/qcf-status/: SKILL.md
.claude/skills/qcf-stop/: SKILL.md
qcf/: __init__.py  __main__.py  cli.py  config.py  default_config.toml  engine.py  events.py  evolver.py  grouper.py  hooks.py  models.py  progress.py  runner.py  watch.py  worktree.py
qcf/prompts/: __init__.py  api-reviewer.md  api_review.md  audit.j2  audit.md  design_review.md  evolver.j2  evolver.md  fix.j2  implement.j2  implement.md  meta-auditor.md  meta_audit.j2  meta_audit.md  pilot.j2  pilot.md  review.j2  scout.j2  task-validator.md  tech-lead.j2  tech-lead.md  test-agent.md
