[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcf"
dynamic = ["version"]
description = "The Quad-Core Flow (QCF) — tech-lead → coder → reviewer → security"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3",
    'tomli>=1.1; python_version < "3.11"',
    "pyyaml>=5",
]

[project.scripts]
qcf = "qcf.cli:main"
pipeline = "qcf.cli:main"

[tool.setuptools.packages.find]
include = ["qcf*"]

[tool.setuptools.package-data]
qcf = ["default_config.toml"]

[tool.setuptools.dynamic]
version = {attr = "qcf.__version__"}

[tool.bumpversion]
current_version = "0.5.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "qcf/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
